# adfire

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: unit-tests.yaml
adfire/: __init__.py  __main__.py  adfire.py  autofill.py  config.py  errors.py  format.py  io.py  logger.py  main.py  portfolio.py  schema.py  utils.py
adfire/balances/: __main__.py
adfire/categories/: __main__.py
adfire/lint/: __init__.py  accounts.py  base.py  core.py  currencies.py  exceptions.py  transactions.py  utils.py
adfire/resources/sample/: portfolio.json  portfolio.toml
adfire/resources/sample/accounts/: chase freedom student.csv  robinhood individual.csv  secu cash.csv  slb salary.csv
adfire/resources/sample/transactions/: coffee.csv  robinhood individual.csv  slb salary.csv
adfire/resources/sample_formatted/accounts/: chase freedom student.csv  coffee.csv  discover it.csv  wealthfront individual.csv
adfire/resources/sample_formatted/transactions/: coffee.csv  robinhood individual.csv  slb salary.csv
resources/sample/: portfolio.json
resources/sample/accounts/: chase freedom student.csv  discover it.csv  wealthfront individual.csv
resources/sample_formatted/accounts/: chase freedom student.csv  discover it.csv  wealthfront individual.csv
tests/: conftest.py  test_adfire.py  test_autofill.py  test_fill_balances.py  test_format.py  test_format_types.py  test_main.py  test_portfolio.py  test_schema.py  test_sort_record.py  test_utils.py  utils.py
tests/sample_view/: __main__.py
tests/test_lint/: test_accounts.py
(+208 files in other folders)
